# vala-downloader-lib

./: Makefile  README.md  init-local-vapi.sh  init.sh  meson.build
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: manager.vala  meson.build
subprojects/: vala_testcases.wrap
tests/: download_async_local_server_test.vala  download_sync_internal_error_test.vala  download_sync_local_server_test.vala  download_sync_not_found_test.vala  example_test.vala  main.vala  meson.build  queue_test.vala
